After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659153 - matroskademux: fix stuttering A/V
matroskademux: fix stuttering A/V
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other All
: Normal normal
: 0.10.31
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-15 14:54 UTC by Vincent Penquerc'h
Modified: 2011-09-15 16:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
matroskademux: fix stuttering A/V (1.21 KB, patch)
2011-09-15 14:54 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2011-09-15 14:54:49 UTC
matroskademux: fix stuttering A/V
Comment 1 Vincent Penquerc'h 2011-09-15 14:54:51 UTC
Created attachment 196641 [details] [review]
matroskademux: fix stuttering A/V

Someone got had by implicit promotion to unsigned in ops with
a signed and an unsigned value.
Comment 2 Christian Fredrik Kalager Schaller 2011-09-15 15:02:44 UTC
Tested, fixes the bug for me.
Comment 3 Tim-Philipp Müller 2011-09-15 16:31:47 UTC
Thanks!

 commit 26ae2330357174e2d806d9953ddad0baa364188d
 Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
 Date:   Thu Sep 15 15:53:47 2011 +0100

    matroskademux: fix stuttering A/V
    
    Someone got had by implicit promotion to unsigned in ops with
    a signed and an unsigned value.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=659153